# JSFlightSite

./: README.md  crew.graphql  flight.graphql  gear.graphql  incident.graphql  index.html  main.py  objective.graphql  pyproject.toml
db/: client.py  exceptions.py
resolvers/: __init__.py
resolvers/query/: __init__.py
scalars/: __init__.py
schemas/: client.graphql  crew.graphql  flight.graphql  gear.graphql  gig.graphql  incident.graphql  main.graphql  mission.graphql  objective.graphql
static/: style.css
