[tool.poetry]
name = "jsflightsite"
version = "0.1.0"
description = ""
authors = ["Joe Shoulak <joepshoulak2@gmail.com>", "Zachary Westerman <westerman.zachary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
ariadne = "^0.23.0"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
